scripts/nullaway/annotator/urlc7e4b8c1f2_normchan_craps_simulator_tgz-pJ8-normchan_crapssim_SimulatorJ8.txt
../annotator/urlc7e4b8c1f2_normchan_craps_simulator_tgz-pJ8-normchan_crapssim_SimulatorJ8/src/normchan/crapssim/engine/Player.java:15: error: [NullAway] initializer method does not guarantee @NonNull field strategy (line 13) is initialized along all control-flow paths (remember to check for exceptions or early returns).
	public Player(int balance) {
	       ^
    (see http://t.uber.com/nullaway )
../annotator/urlc7e4b8c1f2_normchan_craps_simulator_tgz-pJ8-normchan_crapssim_SimulatorJ8/src/normchan/crapssim/Simulator.java:68: error: [NullAway] dereferenced expression tracker is @Nullable
		tracker.calculateStats();
		       ^
    (see http://t.uber.com/nullaway )
../annotator/urlc7e4b8c1f2_normchan_craps_simulator_tgz-pJ8-normchan_crapssim_SimulatorJ8/src/normchan/crapssim/simulation/Controller.java:8: error: [NullAway] @NonNull field manager not initialized
	protected GameManager manager;
	                      ^
    (see http://t.uber.com/nullaway )
../annotator/urlc7e4b8c1f2_normchan_craps_simulator_tgz-pJ8-normchan_crapssim_SimulatorJ8/src/normchan/crapssim/simulation/strategy/ProgressiveRollStrategy.java:59: error: [NullAway] dereferenced expression layout.getPassLine() is @Nullable
				if (startBalance == 0) startBalance = player.getBalance() + layout.getPassLine().getMainBet(); 
				                                                                                ^
    (see http://t.uber.com/nullaway )
../annotator/urlc7e4b8c1f2_normchan_craps_simulator_tgz-pJ8-normchan_crapssim_SimulatorJ8/src/normchan/crapssim/simulation/strategy/ProgressiveComeOutHedgeStrategy10.java:44: error: [NullAway] dereferenced expression comeBets is @Nullable
			addBet(new AnySeven(layout, player, (int)(0.5*unitSize*comeBets.size())));
			                                                               ^
    (see http://t.uber.com/nullaway )
../annotator/urlc7e4b8c1f2_normchan_craps_simulator_tgz-pJ8-normchan_crapssim_SimulatorJ8/src/normchan/crapssim/simulation/tracker/PlayerTracker.java:37: error: [NullAway] initializer method does not guarantee @NonNull field stats (line 31) is initialized along all control-flow paths (remember to check for exceptions or early returns).
	public PlayerTracker(GameManager manager, int initialBalance) {
	       ^
    (see http://t.uber.com/nullaway )
Note: Some input files use or override a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
Note: ../annotator/urlc7e4b8c1f2_normchan_craps_simulator_tgz-pJ8-normchan_crapssim_SimulatorJ8/src/normchan/crapssim/Simulator.java uses unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
6 errors
